added js + fixed css & html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         <form id="container_taskForm">
             <label for="task">Que vols recordar?</label>
             <input type="text" name="task" id="taskForm_task">
-            <button type="submit">Recorda</button>
+            <button type="submit" class="taskForm_submitButton">Recorda</button>
         </form>
-        <table id="container_taskView">
-        </table>
+        <div id="container_taskView">
+        </div>
     </div>
+    <script src="script.js" defer></script>
 </body>
 </html>
